backend/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-app
  namespace: app
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "api.yourdomain.com"   # replace with your real subdomain
  rules:
    - backendRefs:
        - name: backend-app
          port: 5000
